welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    while (!estSurBiscuit){
      if (!estFaceMur) {
        avance;
        if (getCouleurSol){
          recule;avance;
        }
      }
      else { gauche;}
    }
  return true
}